// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs renders correctly with default values 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-b4pk9x-LinkVariant {
  display: inline;
}

.cache-b4pk9x-LinkVariant[aria-current='page'] {
  color: #b2b6c3;
}

.cache-b4pk9x-LinkVariant:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl e1081fv12"
    >
      <li
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with invalid child 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl e1081fv12"
    >
      Invalid child
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with onClick 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-b4pk9x-LinkVariant {
  display: inline;
}

.cache-b4pk9x-LinkVariant[aria-current='page'] {
  color: #b2b6c3;
}

.cache-b4pk9x-LinkVariant:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

.cache-gkjul7-LinkVariant {
  display: inline;
  cursor: pointer;
}

.cache-gkjul7-LinkVariant[aria-current='page'] {
  color: #b2b6c3;
}

.cache-gkjul7-LinkVariant:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-gkjul7-LinkVariant[aria-disabled="true"] {
  pointer-events: none;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl e1081fv12"
    >
      <li
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-gkjul7-LinkVariant e1081fv10"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with onClick on bubble variant 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-oaz3hk-BubbleVariant {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  line-height: 24px;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 48px;
  padding-right: 24px;
  margin-left: -24px;
  margin-right: -24px;
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-oaz3hk-BubbleVariant:first-of-type {
  padding-left: 24px;
  margin-left: 0;
  margin-right: -24px;
}

.cache-oaz3hk-BubbleVariant:last-of-type {
  margin-right: 0;
}

.cache-oaz3hk-BubbleVariant[aria-current='page'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-oaz3hk-BubbleVariant[aria-current='page']~.cache-oaz3hk-BubbleVariant {
  background-color: #ffffff;
  color: #b2b6c3;
  border-color: #d4dae7;
}

.cache-oaz3hk-BubbleVariant:nth-child(1) {
  z-index: 10;
}

.cache-oaz3hk-BubbleVariant:nth-child(2) {
  z-index: 9;
}

.cache-oaz3hk-BubbleVariant:nth-child(3) {
  z-index: 8;
}

.cache-oaz3hk-BubbleVariant:nth-child(4) {
  z-index: 7;
}

.cache-oaz3hk-BubbleVariant:nth-child(5) {
  z-index: 6;
}

.cache-oaz3hk-BubbleVariant:nth-child(6) {
  z-index: 5;
}

.cache-oaz3hk-BubbleVariant:nth-child(7) {
  z-index: 4;
}

.cache-oaz3hk-BubbleVariant:nth-child(8) {
  z-index: 3;
}

.cache-oaz3hk-BubbleVariant:nth-child(9) {
  z-index: 2;
}

.cache-oaz3hk-BubbleVariant:nth-child(10) {
  z-index: 1;
}

.cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

.cache-ripq9d-BubbleVariant {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  line-height: 24px;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 48px;
  padding-right: 24px;
  margin-left: -24px;
  margin-right: -24px;
  background-color: #22c8a2;
  color: #ffffff;
  cursor: pointer;
}

.cache-ripq9d-BubbleVariant:first-of-type {
  padding-left: 24px;
  margin-left: 0;
  margin-right: -24px;
}

.cache-ripq9d-BubbleVariant:last-of-type {
  margin-right: 0;
}

.cache-ripq9d-BubbleVariant[aria-current='page'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-ripq9d-BubbleVariant[aria-current='page']~.cache-ripq9d-BubbleVariant {
  background-color: #ffffff;
  color: #b2b6c3;
  border-color: #d4dae7;
}

.cache-ripq9d-BubbleVariant[aria-disabled="true"] {
  pointer-events: none;
}

.cache-ripq9d-BubbleVariant:nth-child(1) {
  z-index: 10;
}

.cache-ripq9d-BubbleVariant:nth-child(2) {
  z-index: 9;
}

.cache-ripq9d-BubbleVariant:nth-child(3) {
  z-index: 8;
}

.cache-ripq9d-BubbleVariant:nth-child(4) {
  z-index: 7;
}

.cache-ripq9d-BubbleVariant:nth-child(5) {
  z-index: 6;
}

.cache-ripq9d-BubbleVariant:nth-child(6) {
  z-index: 5;
}

.cache-ripq9d-BubbleVariant:nth-child(7) {
  z-index: 4;
}

.cache-ripq9d-BubbleVariant:nth-child(8) {
  z-index: 3;
}

.cache-ripq9d-BubbleVariant:nth-child(9) {
  z-index: 2;
}

.cache-ripq9d-BubbleVariant:nth-child(10) {
  z-index: 1;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl e1081fv12"
    >
      <li
        aria-disabled="false"
        class="cache-oaz3hk-BubbleVariant e1081fv11"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-oaz3hk-BubbleVariant e1081fv11"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-ripq9d-BubbleVariant e1081fv11"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with selected item 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-b4pk9x-LinkVariant {
  display: inline;
}

.cache-b4pk9x-LinkVariant[aria-current='page'] {
  color: #b2b6c3;
}

.cache-b4pk9x-LinkVariant:not(:last-child)::after {
  content: '›';
  margin: 0 8px;
}

.cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl e1081fv12"
    >
      <li
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-b4pk9x-LinkVariant e1081fv10"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;

exports[`Breadcrumbs renders correctly with variant bubble 1`] = `
<DocumentFragment>
  .cache-198ohfb-StyledOl {
  list-style: none;
  margin: 0;
  padding: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-oaz3hk-BubbleVariant {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-weight: 500;
  line-height: 24px;
  border-radius: 24px;
  border-style: solid;
  border-width: 1px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  text-align: center;
  padding-top: 12px;
  padding-bottom: 12px;
  padding-left: 48px;
  padding-right: 24px;
  margin-left: -24px;
  margin-right: -24px;
  background-color: #22c8a2;
  color: #ffffff;
}

.cache-oaz3hk-BubbleVariant:first-of-type {
  padding-left: 24px;
  margin-left: 0;
  margin-right: -24px;
}

.cache-oaz3hk-BubbleVariant:last-of-type {
  margin-right: 0;
}

.cache-oaz3hk-BubbleVariant[aria-current='page'] {
  background-color: #4f0599;
  color: #ffffff;
}

.cache-oaz3hk-BubbleVariant[aria-current='page']~.cache-oaz3hk-BubbleVariant {
  background-color: #ffffff;
  color: #b2b6c3;
  border-color: #d4dae7;
}

.cache-oaz3hk-BubbleVariant:nth-child(1) {
  z-index: 10;
}

.cache-oaz3hk-BubbleVariant:nth-child(2) {
  z-index: 9;
}

.cache-oaz3hk-BubbleVariant:nth-child(3) {
  z-index: 8;
}

.cache-oaz3hk-BubbleVariant:nth-child(4) {
  z-index: 7;
}

.cache-oaz3hk-BubbleVariant:nth-child(5) {
  z-index: 6;
}

.cache-oaz3hk-BubbleVariant:nth-child(6) {
  z-index: 5;
}

.cache-oaz3hk-BubbleVariant:nth-child(7) {
  z-index: 4;
}

.cache-oaz3hk-BubbleVariant:nth-child(8) {
  z-index: 3;
}

.cache-oaz3hk-BubbleVariant:nth-child(9) {
  z-index: 2;
}

.cache-oaz3hk-BubbleVariant:nth-child(10) {
  z-index: 1;
}

.cache-ow94xv-StyledLink-primary {
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: color 200ms ease;
  transition: color 200ms ease;
  color: #390171;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.cache-ow94xv-StyledLink-primary:hover,
.cache-ow94xv-StyledLink-primary:focus {
  color: #390171;
}

<nav
    aria-label="breadcrumb"
  >
    <ol
      class="cache-198ohfb-StyledOl e1081fv12"
    >
      <li
        aria-disabled="false"
        class="cache-oaz3hk-BubbleVariant e1081fv11"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1"
        >
          Step 1
        </a>
      </li>
      <li
        aria-disabled="false"
        class="cache-oaz3hk-BubbleVariant e1081fv11"
      >
        <a
          class="e4bq1r51 cache-ow94xv-StyledLink-primary"
          href="/step1/step2"
        >
          I'm a very long... long long step
        </a>
      </li>
      <li
        aria-current="page"
        aria-disabled="false"
        class="cache-oaz3hk-BubbleVariant e1081fv11"
      >
        Step 3
      </li>
    </ol>
  </nav>
</DocumentFragment>
`;
